--- a/Project2_RWG/NP_Project2/makefile
+++ b/Project2_RWG/NP_Project2/makefile
@@ -1,3 +1,2 @@
 all:
-	g++ src/simple_shell.cpp libs/*.cpp -o ./mybash/bin/mybash
-	g++ src/server.cpp  -o ./mybash/ras
+	g++ src/server.cpp libs/CommandUnit/CommandUnit.cpp libs/*.cpp -o server
